# aidapdf

./: .gitignore  LICENSE  README.md  TODO.md  alias.sh  pyproject.toml  requirements.txt  setup-venv.sh
aidapdf/: __init__.py  __main__.py  commands.py  config.py  exceptions.py  file.py  ioutil.py  log.py  page_range_parser.py  pageselector.py  pagespecparser.py  pdfutil.py  textextract.py  util.py
docs/: aida-file-specifier.md  aida-page-selector.md  aida-pagespec-ref.txt
