[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aidapdf"
version = "0.1.0"
authors = [
  { name="Tadeas Soucek", email="tadeas.soucek@gmail.com" },
]
description = "A CLI PDF editor"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
py-modules = []

[project.urls]
Homepage = "https://github.com/tadeassoucek/aidapdf"
Issues = "https://github.com/tadeassoucek/aidapdf/issues"
